# icp-opencv

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  create_project_studio2010.bat  create_project_xcode.sh
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example_main.cpp  example_simple.cpp  example_video.cpp
src/icp-opencv/: CMakeLists.txt  icp.c  icp.h
